--- a/template/stat_pick.html
+++ b/template/stat_pick.html
@@ -5,8 +5,8 @@
 
         <div class="content-block">
         <div class="info-block">
-            <h2 id="prof" about="{{char_data.char_prof}}">Профессия: {{char_data.char_prof}}</h2>
-            <h2 style="margin-bottom: 0;">Раса: {{char_data.char_race}}</h2>
+            <h2 style="margin-left: 2%" id="prof" about="{{character.profession}}"> Профессия: {{character.profession}}</h2>
+            <h2 style="margin-bottom: 0; margin-left: 2%">Раса: {{character.race}}</h2>
             <br>
             <h2 style="text-align: center">Информация</h2>
             <div class="class-pick-info">
