--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -58,9 +58,11 @@ footer h2{
 }
 
 .content-block{
-    display: inline-block;
+    /* display: inline-block; */
     width: 100%;
     height: 500px;
+    display: block;
+	min-height: 100%;
 }
 
 .info-block{
@@ -72,6 +74,7 @@ footer h2{
 
 .class-choice-block{
     position: relative;
+    display: inline-block;
     width:70%;
     float: right;
     text-decoration: none;
@@ -305,8 +308,14 @@ input[type="hidden" i] {
     position: relative;
     width:28%;
     float: left;
-    margin-right: 2%;
+    margin-left: 2%;
     margin-bottom: 45px;
+}
+
+.skill-select{
+    padding-left: 1%;
+    padding-right: 1%;
+    font-size: 130%;
 }
 
 .one-line-block{
