--- a/template/prof_list.html
+++ b/template/prof_list.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-    <h2>{{ char_data.char_race }}</h2>
+    <h2 style="margin-left: 2%">Расса {{ character.race }}</h2>
 
 
     <div class="content-block">
